# DeepLC

./: .gitignore  ATLANTIS_SILICA_fixed_mods.csv  CHANGELOG.md  CONTRIBUTING.md  DeepLC_to_ONNX.ipynb  MANIFEST.in  README.md  aa_comp_rel.csv  config.ini  deeplc.py  deeplc.spec  deeplc_fit_model.py  deeplc_innosetup.iss  deeplc_pyinstaller.spec  environment.yml  feat_extractor.py  lc_pep.py  lc_pep_fit_model.py  lib.csv  pyproject.toml  run.py  run_sven.py  run_test.py  run_testV2.py  setup.py  test_deeplc_lib.py
.github/workflows/: ghcr-try-out.yml  publish.yml  python_package_test.yml  test.yml
Sven/: config.txt  unimodptms.txt
datasets/: LUNA_HILIC.csv  LUNA_SILICA.csv  SCX.csv
deep_lc_gui/: deep_lc_gui.properties  install.bat  pom.xml  run_gui_linux.sh
deep_lc_gui/src/main/assembly/: zip.xml
deep_lc_gui/src/main/java/com/compomics/deep_lc_gui/: DeepLcGuiStarter.java
deep_lc_gui/src/main/java/com/compomics/deep_lc_gui/config/: ResourceUtils.java
deep_lc_gui/src/main/java/com/compomics/deep_lc_gui/view/: Console.java  MainController.java  MainFrame.form  MainFrame.java
deep_lc_gui/src/main/java/com/compomics/pep_lc_gui/: PepLcGuiStarter.java
deep_lc_gui/src/main/java/com/compomics/pep_lc_gui/config/: ConfigHolder.java  (+1 more)
deep_lc_gui/src/main/resources/: deep_lc_gui.properties  log4j.properties  pep_lc_gui.properties
deeplc/: __init__.py  __main__.py  _argument_parser.py  _calibration.py  _data.py  _exceptions.py  _features.py  _finetune.py  aa_comp_rel.csv  argument_parsing.py  calibration.py  deeplc.py  deeplc_fit_model.py  feat_extractor.py  features.py  gui.py  onnx_model.py  plot.py  trainl3.py
deeplc/baseline_performance/: baseline_predictions.csv
deeplc/expasy/: three_to_one.csv
deeplc/expasy/ignore/: avg_area_buried.txt  buriedresidues.txt  helicity.txt  hphob_doolittle.txt  mol_fraction.txt  recognitionfactors.txt
deeplc/mod_to_smiles/: mod_to_smiles.txt  mod_to_struct.csv
deeplc/mods/: full_hc_PXD005573_pub_8c22d89667368f2f02ad996469ba157e.pt  full_hc_PXD005573_pub_cb975cfdd4105f97efa0b3afffe075cc.pt
deeplc/unimod/: map_mq_file.csv  unimod_to_formula.csv
deeplc_gui/: deep_lc_gui.properties  deeplc_gui.properties  install_gui_linux.sh  install_gui_windows.bat  pom.xml  run_gui_linux.sh  run_gui_windows.bat  start_gui_large_font_linux.sh  update_DeepLC.bat
deeplc_gui/src/main/java/com/compomics/deeplc_gui/: DeepLcGuiStarter.java
deeplc_gui/src/main/resources/: deeplc_gui.properties  log4j.properties
deeprt_perf_comparison/: perf.xlsx
examples/: deeplc_example.py
examples/datasets/: Xbridge.csv  dia.csv  seqs_exp.csv  test_mod.csv  test_pred.csv  test_train.csv  test_train_deeplc_predictions.csv  unmod.csv
expasy/: bulkiness.txt  molwt.txt  perccomposition.txt  perccomposition_sp.txt  polarity.txt  transm_tendency.txt
expasy/ignore/: hplc.txt
img/: deeplc.icns
install/: environment_linux.yml  install.bat  install.sh  install_linux.sh
mod_to_smiles/: getf.py  struct_to_feat.py
mods/: deeprt_dia.pickle  deeprt_dia_rdkit.pickle  dia_no_mod.pickle  lcpep_synt.pickle  lcpep_synt_rdkit.pickle  synth.pickle
streamlit/: .dockerignore  Dockerfile  README.md  deeplc_streamlit.py  environment.yml  requirements.txt  streamlit_utils.py
streamlit/.streamlit/: config.toml
tests/: test_deepcallc.py  test_deeplc.py  test_deeplc_lib.py  test_deeplc_retrain.py  test_feat_extractor.py
unimod/: unimod_to_formula.csv
(+26 files in other folders)
